--- a/notebooks/Data_for_Playground.ipynb
+++ b/notebooks/Data_for_Playground.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "4   9900.0  13700.0  35.0411  13.9190     NaN"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,16 +200,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
-    "dg = df.copy()\n",
-    "dg[['x', 'y']] = norm.fit_transform(df[['x', 'y']])\n",
-    "dg['label'] = 2 * ((dg.por - dg.por.min()) / (dg.por.max() - dg.por.min()) - 0.5)\n",
-    "dg[['x', 'y', 'label']].to_json('porosity.json', orient='records')"
+    "df['label'] = df.por\n",
+    "df[['x', 'y', 'label']].to_json('porosity.json', orient='records')"
    ]
   },
   {
